Skip to content

Network playing : languages suffixes for subtitles are not recognized

Description

When you play a video from a samba share, with external subtitles like videoname.fre.srt, the language of the subtitles are not displayed

Expected behavior

The language should be display

Actual behavior

It's not

Steps to reproduce

Just play a video from a samba share, with external subtitles like videoname.fre.srt

Screenshot / video

Local

device-2020-11-06-193129

Network

device-2020-11-06-193051

Context

App version

3.3.2 Beta 2

Android version

8.1.0

Device model

Moto G5 Plus XT1685

App mode

Smartphone

TV

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information