subtitle: extract language from URL, not file path

Not all subtitle access have a local file path.

Fixes #25837.